<resources>
    <string name="app_name">Android-project-client</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="or">----------------------------- OR -------------------------------</string>
    <string name="login_in_with_google">Login in with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="signUp_message">Sign up to see photos and videos from your friends</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="mobile_number_or_email">Mobile Number or Email</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_data_policy">By signing up, you agree to our Terms , Data Policy and Cookies Policy .</string>
    <string name="full_name">Full Name</string>

    <string name="trouble_logging_in">Trouble Logging in?</string>
    <string name="forgot_password_explained">Enter your email, phone, or username and we\'ll send you a link to get back into your account.</string>
    <string name="email_phone_username_hint">Email, Phone, or Username</string>
    <string name="send_login_link">Send Login Link</string>
    <string name="create_new_account">Create New Account</string>
    <string name="back_to_login">Back To Login</string>
</resources>