<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        tools:src="@drawable/social_media_logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        android:text="@string/signUp_message" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in_with_google" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:layout_marginLeft="70dp"/>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/mobile_number_or_email"
        android:background="@drawable/custom_input"/>

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/full_name"
        android:background="@drawable/custom_input" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:background="@drawable/custom_input" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:hint="@string/password"
        android:background="@drawable/custom_input" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/terms_data_policy" />

</LinearLayout>