<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword"
    android:background="@drawable/border"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/forgot_password_icon"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trouble_logging_in"

        android:layout_marginStart="110dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_explained"

        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email_phone_username_hint"

        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/send_login_link"

        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"

        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"

        android:layout_marginStart="155dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"

        android:layout_marginStart="160dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/black"

        />
</LinearLayout>