<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@drawable/border"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/social_media_logo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"

        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/password"

        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
       />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="60dp"

        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"

        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_in_with_google"

        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#0000FF"/>

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"

        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:tooltipText="Send an email"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"

        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:textColor="@color/black"/>
</LinearLayout>